Cosmetic changes and changes for fastgalaxy
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -2,7 +2,7 @@
 
 <html lang="en-US" style=" background: #f1f1f1!important; padding: 1rem;">
 <head>
-<link rel="icon" type="image/png" href="https://schorrmedia.com/favicon.png">
+<link rel="icon" type="image/png" href="https://www.fastgalaxy.com/favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
@@ -172,7 +172,7 @@ You entered:  "{{ name }}"   </h3>
 </form>
 
 <h2 style="color:blue;font-size:20px;padding-top:2em; padding-left:2em">
-    <a href="https://jetgal.pythonanywhere.com">Or Start Over</a></h2><p></p>
+    <a href="https://www.fastgalaxy.com">Or Start Over</a></h2><p></p>
 
 </div>
 
