--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -4,7 +4,7 @@
 <html style="background: #f1f1f1!important; padding: 1rem;">
 
 <head>
-<link rel="icon" type="image/png" href="https://schorrmedia.com/favicon.png">
+<link rel="icon" type="image/png" href="https://www.fastgalaxy.com/favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
@@ -109,12 +109,11 @@ $(function() {
 </head>
 
 <body class="bodstyle">
-<div style="border-width: 2em; border-style: solid; border-color:white;   z-index:9; ">
+<div style="border-width: 2em; border-style: solid; border-color:white;   z-index:-2; ">
 
-<div id="container" style="margin:4px; padding-bottom:2px; background-color:#bbc8ce;">
-
-  <img id="image" src="https://schorrmedia.com/wp-content/uploads/2013/09/freeVectorBackgroundLandscape.jpg" />
-  <img id="logo" src="https://schorrmedia.com/wp-content/uploads/2016/07/cooltextLogoSmedia-300x71.gif" />
+<div id="container" style="background: linear-gradient(to bottom right, #ebfafa 10%, #165555 100%); z-index:1;" >
+  <img id="logo0" src="../static/cooltextLogoSmedia-300x71.gif" z-index:6; />
+  <!--<img id="logo" src="https://www.fastgalaxy.com/static/cooltextLogoSmedia-300x71.gif" />-->
 </div>
 
 <div class=cstyle>
@@ -132,9 +131,18 @@ color:white;
 .menufontns {
 font-family:Montserrat, sans-serif;
 line-height:1.5;
-font-size:24px;
+font-size:22px;
 text-shadow: 1px 1px 1px grey;
 }
+
+.w3-blue-gray:hover{ color:#fff!important; background-color: #165555 !important }
+.w3-blue-gray{ background-color: #589393 !important }
+
+.w3-container, .w3-panel {
+	padding: 0.01em 0px;
+}
+
+
 </style>
 
 
