--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en-US" style=" background: #f1f1f1!important; padding: 1rem;">
 <head profile="https://www.w3.org/2005/10/profile">
-<link rel="icon" type="image/png" href="https://schorrmedia.com/favicon.png">
+<link rel="icon" type="image/png" href="https://www.fastgalaxy.com/favicon.png">
 <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="favicon.ico" >
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Cache-Control" content="no-cache" >
@@ -32,12 +32,11 @@ width: 100%;
 
 #logo {
     z-index=1;
-  position: absolute;
-height: 47px;
-
-width: 200px;
-padding-left:5px;
-padding-top:5px;
+    position: absolute;
+    height: 47px;
+    width: 200px;
+    padding-left:5px;
+    padding-top:5px;
 }
 
 #text {
@@ -47,34 +46,40 @@ padding-top:5px;
   font-size: 1.9em;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
-    text-shadow: 1px 1px 1px grey;
-  padding-top: 2.7em;
+   text-shadow: 1px 1px 1px grey;
   padding-left: 9em;
   text-align: center;
 
-     }
+ .bcentered {
+    position: absolute;
+    bottom: 8px;
+    left: 6em;
+}
+
+
+
 </style>
 </head>
 
 <body>
 
 
-<div style="border-width: 2em; border-style: solid; border-color:white;   z-index:9; ">
+<div style="border-width: 2em; border-style: solid; border-color:white; z-index:-2; ">   <!--main area --->
 
-<div id="container">
-
-  <img id="image" src="https://schorrmedia.com/wp-content/uploads/2013/09/freeVectorBackgroundLandscape.jpg" />
-  <img id="logo" src="https://schorrmedia.com/wp-content/uploads/2016/07/cooltextLogoSmedia-300x71.gif" />
-  <p id="text">
+<div id="container" style="background: linear-gradient(to bottom right, #ebfafa 10%, #165555 100%); z-index:1;" >
+  <img id="logo0" src="../static/cooltextLogoSmedia-300x71.gif" z-index:6; />
+  <!--<img id="logo" src="https://www.fastgalaxy.com/static/cooltextLogoSmedia-300x71.gif" />-->
+<p></p>
+  <p id="text" >
     Welcome to LinkCheck
   </p>
 </div>
 
-
+</div>
 
 
 <div style="text-align: right; font-family: Roboto, sans-serif;  font-size: 11pt;
-    font-style:bold; color: #377ba8; padding-top:2em;padding-right:2em; ">
+    font-style:bold; color: #4d7f80; padding-top:2em;padding-right:2em; ">
     This app is not meant for large websites.  <br>
     The larger the website - the longer it will take.<br> &emsp;<br>
 </div>
@@ -82,7 +87,7 @@ padding-top:5px;
 
 <form action="indexn" method ="POST" >
 <div style="font-family: Roboto, sans-serif;
-     font-style: bold; padding-left: 2em; padding-top: .5em; color: DarkSlateGray;">
+     font-style: bold; padding-left: 2em; padding-top: .5em; color:#4d7f80 ;">
 Enter website or webpage<br>
 you want to check <br>
     for broken links <br>
@@ -90,7 +95,7 @@ you want to check <br>
 <input type="text" size="55" name="name"><br>
 </div><div style="padding-left:20em;  padding-top:10px;padding-bottom:6px;">
 
-<input type="submit" value="Submit" style="min-width:15em; background-color:#48B8C6;
+<input type="submit" value="Submit" style="min-width:15em; background-color:#2ec2c2;
        color: white; padding: 9px 24px; font-size: 16px;
         font-style: strong; border-radius:12px;">
 
@@ -98,11 +103,11 @@ you want to check <br>
 </form>
 
 
-<div style="padding-left:4em; padding-top:2em; color:#377ba8;
+<div style="padding-left:4em; padding-top:2em; color:#4d7f80;
            font-family: Montserrat, sans-serif;font-size:14px;font-style:bold" >
 
     If you're here just to try LinkCheck, <br>you can copy and paste one of these links:<br></div>
-<div  style="padding-left: 30em; color: #4271A2; padding-top:0em; z-index:93; font-family:
+<div  style="padding-left: 30em; color: #4d7f80; padding-top:0em; z-index:93; font-family:
     Roboto, sans-serif; font-size:12px; ">
     schorrmedia.com/m.html<br>
         astrology1234.com<br></h4>
@@ -110,7 +115,7 @@ you want to check <br>
 </div>
 
 
-<div style="text-align:left;  font-style:italic; font-size: 92%; color:grey; padding-left:2em; ">
+<div style="text-align:left;  font-style:italic; font-size: 92%; color:dimgrey; padding-left:2em; ">
     Only errors 400, 404, 408, 409 are reported.
 </div>
 <p> &nbsp; </p><p>   &nbsp;</p>
