--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -138,7 +138,7 @@ text-shadow: 1px 1px 1px grey;
 .w3-blue-gray:hover{ color:#fff!important; background-color: #165555 !important }
 .w3-blue-gray{ background-color: #589393 !important }
 
-.w3-container, .w3-panel {
+.w3-container {
 	padding: 0.01em 0px;
 }
 
@@ -147,7 +147,7 @@ text-shadow: 1px 1px 1px grey;
 
 
 <!-----------------------------------bar start----------------------------->
-<div class="w3-container" style="margin-top:4em;">
+<div class="w3-container" style="margin-top:4em; padding: 0.01em 0px !important;">
 <div class="w3-bar w3-blue-gray  ">
   <!-----------------------------------first item ----------------------------->
 
@@ -160,7 +160,7 @@ text-shadow: 1px 1px 1px grey;
 
   <div class="w3-bar-item w3-button menufontns">
 
-  <a href="https://jetgal.pythonanywhere.com" class="w3-bar-item">
+  <a href="https://www.fastgalaxy.com" class="w3-bar-item">
     Start Over</a>
 
   </div>
