Cosmetic changes and changes for fastgalaxy
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,8 +67,8 @@ width: 100%;
 <div style="border-width: 2em; border-style: solid; border-color:white; z-index:-2; ">   <!--main area --->
 
 <div id="container" style="background: linear-gradient(to bottom right, #ebfafa 10%, #165555 100%); z-index:1;" >
-  <img id="logo0" src="../static/cooltextLogoSmedia-300x71.gif" z-index:6; />
-  <!--<img id="logo" src="https://www.fastgalaxy.com/static/cooltextLogoSmedia-300x71.gif" />-->
+  <img id="logo" src="https://www.fastgalaxy.com/logo.gif" z-index:6; />
+  <!--<img id="logo" src="https://www.fastgalaxy.com/logo.gif" />-->
 <p></p>
   <p id="text" >
     Welcome to LinkCheck
@@ -78,7 +78,7 @@ width: 100%;
 </div>
 
 
-<div style="text-align: right; font-family: Roboto, sans-serif;  font-size: 11pt;
+<div style="text-align: right; font-family: Roboto, sans-serif;  font-size: 12pt;
     font-style:bold; color: #4d7f80; padding-top:2em;padding-right:2em; ">
     This app is not meant for large websites.  <br>
     The larger the website - the longer it will take.<br> &emsp;<br>
@@ -104,18 +104,18 @@ you want to check <br>
 
 
 <div style="padding-left:4em; padding-top:2em; color:#4d7f80;
-           font-family: Montserrat, sans-serif;font-size:14px;font-style:bold" >
+           font-family: Montserrat, sans-serif;font-size:16px;  font-weight:700;" >
 
     If you're here just to try LinkCheck, <br>you can copy and paste one of these links:<br></div>
-<div  style="padding-left: 30em; color: #4d7f80; padding-top:0em; z-index:93; font-family:
-    Roboto, sans-serif; font-size:12px; ">
+<div  style="padding-left: 34em; color: #4d7f80; padding-top:.5em; z-index:93; font-family:
+    Roboto, sans-serif; font-size:14px; ">
     schorrmedia.com/m.html<br>
         astrology1234.com<br></h4>
 <br>
 </div>
 
 
-<div style="text-align:left;  font-style:italic; font-size: 92%; color:dimgrey; padding-left:2em; ">
+<div style="text-align:left;  font-style:italic; font-size: 92%; color:dimgrey; padding-left:2em; font-weight:700;">
     Only errors 400, 404, 408, 409 are reported.
 </div>
 <p> &nbsp; </p><p>   &nbsp;</p>
