Cosmetic changes and changes for fastgalaxy
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en-US" style=" background: #f1f1f1!important; padding: 1rem;">
 <head profile="https://www.w3.org/2005/10/profile">
-<link rel="icon" type="image/png" href="https://www.fastgalaxy.com/favicon.png">
+<link rel="icon" type="image/png" href="https://www.fastgalaxy.com/static/favicon.png">
 <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="favicon.ico" >
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Cache-Control" content="no-cache" >
@@ -10,6 +10,8 @@
 <meta http-equiv="Expires" content=0 >
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel=stylesheet href="../static/style.css">
+<link rel=stylesheet href="https://www.fastgalaxy.com/static/style.css">
+
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -67,7 +69,7 @@ width: 100%;
 <div style="border-width: 2em; border-style: solid; border-color:white; z-index:-2; ">   <!--main area --->
 
 <div id="container" style="background: linear-gradient(to bottom right, #ebfafa 10%, #165555 100%); z-index:1;" >
-  <img id="logo" src="https://www.fastgalaxy.com/logo.gif" z-index:6; />
+  <img id="logo" src="https://www.fastgalaxy.com/static/logo.gif" z-index:6; />
   <!--<img id="logo" src="https://www.fastgalaxy.com/logo.gif" />-->
 <p></p>
   <p id="text" >
