--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -2,14 +2,15 @@
 
 <html lang="en-US" style=" background: #f1f1f1!important; padding: 1rem;">
 <head>
-<link rel="icon" type="image/png" href="https://www.fastgalaxy.com/favicon.png">
+<link rel="icon" type="image/png" href="https://www.fastgalaxy.com/static/favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content=0>
-<title>LinkCheck Step Two</title>
+<link rel=stylesheet href="https://www.fastgalaxy.com/static/style.css">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
+<title>LinkCheck Step Two</title>
 
 <style>
 h3 {
