--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -4,13 +4,15 @@
 <html style="background: #f1f1f1!important; padding: 1rem;">
 
 <head>
-<link rel="icon" type="image/png" href="https://www.fastgalaxy.com/favicon.png">
+<link rel="icon" type="image/png" href="https://www.fastgalaxy.com/static/favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel=stylesheet href="./static/style.css">
+  <link rel=stylesheet href="../static/style.css">
+
+<link rel=stylesheet href="https://www.fastgalaxy.com/static/style.css">
 
 <style type="text/css">
 
