Cosmetic changes and changes for fastgalaxy
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@ width: 100%;
 }
 
 #logo {
-    z-index=1;
+    z-index=7;
     position: absolute;
     height: 47px;
     width: 200px;
@@ -69,9 +69,9 @@ width: 100%;
 <div style="border-width: 2em; border-style: solid; border-color:white; z-index:-2; ">   <!--main area --->
 
 <div id="container" style="background: linear-gradient(to bottom right, #ebfafa 10%, #165555 100%); z-index:1;" >
-  <img id="logo" src="https://www.fastgalaxy.com/static/logo.gif" z-index:6; />
-  <!--<img id="logo" src="https://www.fastgalaxy.com/logo.gif" />-->
-<p></p>
+  <img id="logo" src="https://www.fastgalaxy.com/static/cooltextLogoSmedia-300x71.gif" />
+
+    <p></p>
   <p id="text" >
     Welcome to LinkCheck
   </p>
@@ -121,8 +121,8 @@ you want to check <br>
     Only errors 400, 404, 408, 409 are reported.
 </div>
 <p> &nbsp; </p><p>   &nbsp;</p>
-</div>
-</div>
+
+
 </body>
 <head>
 <meta http-equiv="Cache-Control" content="no-cache" >
