--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -114,8 +114,8 @@ $(function() {
 <div style="border-width: 2em; border-style: solid; border-color:white;   z-index:-2; ">
 
 <div id="container" style="background: linear-gradient(to bottom right, #ebfafa 10%, #165555 100%); z-index:1;" >
-  <img id="logo0" src="../static/cooltextLogoSmedia-300x71.gif" z-index:6; />
-  <!--<img id="logo" src="https://www.fastgalaxy.com/static/cooltextLogoSmedia-300x71.gif" />-->
+  <!--<img id="logo0" src="../static/cooltextLogoSmedia-300x71.gif" z-index:6; />-->
+  <img id="logo" src="https://www.fastgalaxy.com/static/cooltextLogoSmedia-300x71.gif" />
 </div>
 
 <div class=cstyle>
