Cosmetic changes and changes for fastgalaxy
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,6 @@
 
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Yantramanav:800" rel="stylesheet">
 <title>&emsp;LinkCheck</title>
 <style>
 
@@ -72,7 +70,7 @@ width: 100%;
   <img id="logo" src="https://www.fastgalaxy.com/static/cooltextLogoSmedia-300x71.gif" />
 
     <p></p>
-  <p id="text" >
+  <p id="text" style="padding-top:2.5em;">
     Welcome to LinkCheck
   </p>
 </div>
@@ -80,16 +78,10 @@ width: 100%;
 </div>
 
 
-<div style="text-align: right; font-family: Roboto, sans-serif;  font-size: 12pt;
-    font-style:bold; color: #4d7f80; padding-top:2em;padding-right:2em; ">
-    This app is not meant for large websites.  <br>
-    The larger the website - the longer it will take.<br> &emsp;<br>
-</div>
-
 
 <form action="indexn" method ="POST" >
-<div style="font-family: Roboto, sans-serif;
-     font-style: bold; padding-left: 2em; padding-top: .5em; color:#4d7f80 ;">
+<div style="font-family: Montserrat, sans-serif;
+     font-weight: 700; padding-left: 2em; padding-top: .5em; color:#4d7f80 ;">
 Enter website or webpage<br>
 you want to check <br>
     for broken links <br>
@@ -97,7 +89,7 @@ you want to check <br>
 <input type="text" size="55" name="name"><br>
 </div><div style="padding-left:20em;  padding-top:10px;padding-bottom:6px;">
 
-<input type="submit" value="Submit" style="min-width:15em; background-color:#2ec2c2;
+<input type="submit" value="Submit" style="min-width:15em; background-color:#ffa833;
        color: white; padding: 9px 24px; font-size: 16px;
         font-style: strong; border-radius:12px;">
 
@@ -105,20 +97,19 @@ you want to check <br>
 </form>
 
 
-<div style="padding-left:4em; padding-top:2em; color:#4d7f80;
-           font-family: Montserrat, sans-serif;font-size:16px;  font-weight:700;" >
+<div  style="padding-left: 19em; color: #4d7f80; padding-top:3em; z-index:101; font-family:
 
-    If you're here just to try LinkCheck, <br>you can copy and paste one of these links:<br></div>
-<div  style="padding-left: 34em; color: #4d7f80; padding-top:.5em; z-index:93; font-family:
-    Roboto, sans-serif; font-size:14px; ">
+    Montserrat, sans-serif; font-size:14px; position:absolute;">
+    If you're here just to try LinkCheck, <br>you can copy and paste one of these links:<br><br>
     schorrmedia.com/m.html<br>
         astrology1234.com<br></h4>
 <br>
 </div>
+<br><br>
 
-
-<div style="text-align:left;  font-style:italic; font-size: 92%; color:dimgrey; padding-left:2em; font-weight:700;">
-    Only errors 400, 404, 408, 409 are reported.
+<div style="font-family: Montserrat, sans-serif; padding-top:24em;text-align:left;  font-style:italic; font-size: 72%; color:dimgrey; padding-left:2em; font-weight:700;">
+    Only errors 400, 404, 408, 409 are reported. <br>This app is not meant for extremely large websites.  <br>
+    The larger the website - the longer it will take.
 </div>
 <p> &nbsp; </p><p>   &nbsp;</p>
 
