Cosmetic changes and changes for fastgalaxy
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -9,13 +9,15 @@
 <meta http-equiv="Expires" content=0>
 <link rel=stylesheet href="https://www.fastgalaxy.com/static/style.css">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
 
 <title>LinkCheck Step Two</title>
 
 <style>
 h3 {
     color:#003399;
-    font-family:"Arial", "Helvetica Neue", Helvetica, sans-serif;
+    font-family:"Montserrat",  Helvetica, sans-serif;
     font-weight: 700;
 }
 
