--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -13,7 +13,7 @@
   <link rel=stylesheet href="../static/style.css">
 
 <link rel=stylesheet href="https://www.fastgalaxy.com/static/style.css">
-
+Montserrat
 <style type="text/css">
 
 .bodstyle {
@@ -137,8 +137,8 @@ font-size:22px;
 text-shadow: 1px 1px 1px grey;
 }
 
-.w3-blue-gray:hover{ color:#fff!important; background-color: #165555 !important }
-.w3-blue-gray{ background-color: #589393 !important }
+.w3-blue-gray:hover{ color:#fff!important; background-color: #568386  !important }
+.w3-blue-gray{ background-color: #a2c1c3  !important }#568386
 
 .w3-container {
 	padding: 0.01em 0px;
