--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -34,6 +34,7 @@ h4 {
         font-size:12px;
         padding-left:2em;
         font-style:italic;
+        color:DarkSlateBlue;
         }
 
 .cstyle {
