Cosmetic changes and changes for fastgalaxy
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -89,26 +89,25 @@ you want to check <br>
 <input type="text" size="55" name="name"><br>
 </div><div style="padding-left:20em;  padding-top:10px;padding-bottom:6px;">
 
-<input type="submit" value="Submit" style="min-width:15em; background-color:#ffa833;
-       color: white; padding: 9px 24px; font-size: 16px;
-        font-style: strong; border-radius:12px;">
+<input type="submit" value="Submit" style="min-width:15em; background-color:lightgrey;
+       color: teal; text-shadow: 1px 1px 1px white; padding: 9px 24px; font-size: 14px;
+        font-weight:400; font-family:
+    Arial, sans-serif; border-radius:12px;">
 
     </div>
 </form>
 
-
+<br>
 <div  style="padding-left: 19em; color: #4d7f80; padding-top:3em; z-index:101; font-family:
-
-    Montserrat, sans-serif; font-size:14px; position:absolute;">
-    If you're here just to try LinkCheck, <br>you can copy and paste one of these links:<br><br>
-    schorrmedia.com/m.html<br>
-        astrology1234.com<br></h4>
+    Arial, sans-serif; font-size:14px; color:mediumslateblue; position:absolute;">
+    If you're here just to try LinkCheck, <br>you can copy and paste this:<br><br>
+    &nbsp;&nbsp;&nbsp;&nbsp;astrology1234.com<br></h4>
 <br>
 </div>
 <br><br>
 
-<div style="font-family: Montserrat, sans-serif; padding-top:24em;text-align:left;  font-style:italic; font-size: 72%; color:dimgrey; padding-left:2em; font-weight:700;">
-    Only errors 400, 404, 408, 409 are reported. <br>This app is not meant for extremely large websites.  <br>
+<div style="font-family: Montserrat, sans-serif; padding-top:24em;text-align:left; font-size: 72%; color:dimgrey; padding-left:2em; font-weight:600;">
+    Only errors 400, 404, 408, 409 are reported. <br><br>This app is not meant for extremely large websites.  <br>
     The larger the website - the longer it will take.
 </div>
 <p> &nbsp; </p><p>   &nbsp;</p>
