--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -13,7 +13,7 @@
   <link rel=stylesheet href="../static/style.css">
 
 <link rel=stylesheet href="https://www.fastgalaxy.com/static/style.css">
-Montserrat
+
 <style type="text/css">
 
 .bodstyle {
@@ -34,7 +34,7 @@ h4 {
         font-size:12px;
         padding-left:2em;
         font-style:italic;
-        color:DarkSlateBlue;
+        color:PaleVioletRed;
         }
 
 .cstyle {
