Cosmetic changes and changes for fastgalaxy
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@ you want to check <br>
 <div  style="padding-left: 19em; color: #4d7f80; padding-top:3em; z-index:101; font-family:
     Arial, sans-serif; font-size:14px; color:mediumslateblue; position:absolute;">
     If you're here just to try LinkCheck, <br>you can copy and paste this:<br><br>
-    &nbsp;&nbsp;&nbsp;&nbsp;astrology1234.com<br></h4>
+astrology1234.com<br></h4>
 <br>
 </div>
 <br><br>
