Cosmetic changes and changes for fastgalaxy
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -2,12 +2,12 @@
 
 <html lang="en-US" style=" background: #f1f1f1!important; padding: 1rem;">
 <head>
-<link rel="icon" type="image/png" href="https://www.fastgalaxy.com/static/favicon.png">
+<link rel="icon" type="image/png" href="https://linkcheck.schorrmedia.com/static/favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content=0>
-<link rel=stylesheet href="https://www.fastgalaxy.com/static/style.css">
+<link rel=stylesheet href="https://linkcheck.schorrmedia.com/static/style.css">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
@@ -16,7 +16,7 @@
 
 <style>
 h3 {
-    color:#003399;
+    color:#4d7f80;
     font-family:"Montserrat",  Helvetica, sans-serif;
     font-weight: 700;
 }
@@ -64,11 +64,11 @@ h3 {
 <style type="text/css">
 
 .continueButton {
-    background-color: #48B8C6;
+    background-color: ##4d7f80;
     color: white;
     padding: 12px 32px;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 12px;
+    font-weight: 700;
     border-radius: 12px;
 }
 
@@ -171,11 +171,11 @@ You entered:  "{{ name }}"   </h3>
 
 <form id="form" action="/indexnn" method ="POST" onsubmit="chg(); return true;">
   <input type="hidden" name="name" value="{{ name }}">
-  <input type="submit" id="mb" value="   Continue   " class="continueButton" >
+  <input type="submit" id="mb" value="  C O N T I N U E  " class="continueButton" >
 </form>
 
-<h2 style="color:blue;font-size:20px;padding-top:2em; padding-left:2em">
-    <a href="https://www.fastgalaxy.com">Or Start Over</a></h2><p></p>
+<h2 style="color:#4d7f80;font-size:20px;padding-top:2em; padding-left:2em">
+    <a href="https://linkcheck.schorrmedia.com">Or Start Over</a></h2><p></p>
 
 </div>
 
