--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -4,7 +4,7 @@
 <html style="background: #f1f1f1!important; padding: 1rem;">
 
 <head>
-<link rel="icon" type="image/png" href="https://www.fastgalaxy.com/static/favicon.png">
+<link rel="icon" type="image/png" href="https://linkcheck.schorrmedia.com/static/favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel=stylesheet href="../static/style.css">
 
-<link rel=stylesheet href="https://www.fastgalaxy.com/static/style.css">
+<link rel=stylesheet href="https://linkcheck.schorrmedia.com/static/style.css">
 
 <style type="text/css">
 
@@ -35,6 +35,10 @@ h4 {
         padding-left:2em;
         font-style:italic;
         color:PaleVioletRed;
+        }
+
+#errline2 {
+        color:Red;
         }
 
 .cstyle {
@@ -116,7 +120,7 @@ $(function() {
 
 <div id="container" style="background: linear-gradient(to bottom right, #ebfafa 10%, #165555 100%); z-index:1;" >
   <!--<img id="logo0" src="../static/cooltextLogoSmedia-300x71.gif" z-index:6; />-->
-  <img id="logo" src="https://www.fastgalaxy.com/static/cooltextLogoSmedia-300x71.gif" />
+  <img id="logo" src="https://linkcheck.schorrmedia.com/static/cooltextLogoSmedia-300x71.gif" />
 </div>
 
 <div class=cstyle>
@@ -163,7 +167,7 @@ text-shadow: 1px 1px 1px grey;
 
   <div class="w3-bar-item w3-button menufontns">
 
-  <a href="https://www.fastgalaxy.com" class="w3-bar-item">
+  <a href="https://linkcheck.schorrmedia.com" class="w3-bar-item">
     Start Over</a>
 
   </div>
@@ -173,7 +177,7 @@ text-shadow: 1px 1px 1px grey;
   <div class="w3-bar-item w3-button menufontns">
 
        <a href="https://schorrmedia.com" class="w3-bar-item">
-         Visit SchorrMedia.com</a>
+         Home</a>
 
   </div>
 
