--- a/templates/index.html
+++ b/templates/index.html
@@ -89,8 +89,8 @@ you want to check <br>
 <input type="text" size="55" name="name"><br>
 </div><div style="padding-left:20em;  padding-top:10px;padding-bottom:6px;">
 
-<input type="submit" value="S U B M I T" style="min-width:15em; background-color:lightgrey;
-       color: teal; text-shadow: 1px 2px 1px white; padding: 9px 24px; font-size: 14px;
+<input type="submit" value="S U B M I T" style="min-width:15em; background-color:#4d7f80;
+       color:lightcyan ; text-shadow: 1px 1px 1px darkgrey; padding: 9px 24px; font-size: 15px;
         font-weight:700;   font-style:italic; font-family:
     Arial, sans-serif; border-radius:12px;">
 
