--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -64,7 +64,7 @@ h3 {
 <style type="text/css">
 
 .continueButton {
-    background-color: ##4d7f80;
+    background-color: #4d7f80;
     color: white;
     padding: 12px 32px;
     font-size: 12px;
@@ -77,7 +77,7 @@ h3 {
     margin-top: 4em;
     display: none;
     font-style: italic;
-    color: purple;
+    color: PaleVioletRed;
 }
 
 #bodd {
@@ -107,7 +107,7 @@ h3 {
     padding-top:1em;
     font-weight: bolder;
     font-size: 150%;
-    color:red;
+    color:PaleVioletRed;
     display: none;
    }
 
@@ -117,15 +117,15 @@ h3 {
     display: none;
     font-style: italic;
     font-size: 100%;
-    color:red;
+    color:#4d7f80;
    }
 
 #div2 {
     margin-left: 15em;
     margin-top: 4em;
     display: none;
-    font-size: 14px;
-    color: #377ba8;
+    font-size: 16px;
+    color: #4d7f80;
     font-style: italic;
    }
 
@@ -174,7 +174,13 @@ You entered:  "{{ name }}"   </h3>
   <input type="submit" id="mb" value="  C O N T I N U E  " class="continueButton" >
 </form>
 
-<h2 style="color:#4d7f80;font-size:20px;padding-top:2em; padding-left:2em">
+
+<style>
+.h2new {  color:#4d7f80;font-size:20px;padding-top:2em; padding-left:2em" }
+ </style>
+
+
+<h2 class=h2new>
     <a href="https://linkcheck.schorrmedia.com">Or Start Over</a></h2><p></p>
 
 </div>
