Cosmetic changes and changes for pythonanywhere
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html  PUBLIC "-//W3C//DTD HTML 4.01//EN" "https://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html  PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 
-<html lang="en-US" style=" background: #f1f1f1!important; padding: 1rem;">
+<html lang="en-US" prefix="og: http://ogp.me/ns#" style=" background: #f1f1f1!important; padding: 1rem;">
+
 <head profile="https://www.w3.org/2005/10/profile">
 <link rel="icon" type="image/png" href="https://linkcheck.schorrmedia.com/static/favicon.png">
 <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="favicon.ico" >
@@ -9,6 +10,19 @@
 <meta http-equiv="Pragma" content="no-cache" >
 <meta http-equiv="Expires" content=0 >
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="Nancy Schorr">
+<meta name="date" content="2018-11-15" scheme="YYYY-MM-DD">
+
+
+  <meta property="og:title" content="LinkCheck" />
+  <meta property="og:description" content="Linkcheck will discover broken links on any website or webpage." />
+  <meta property="og:url" content="https://linkcheck.schorrmedia.com/" />
+  <meta property="og:image" content="https://schorrmedia.com/images/light7.jpg" />
+
+
+
+
+
 <link rel=stylesheet href="../static/style.css">
 <link rel=stylesheet href="https://linkcheck.schorrmedia.com/static/style.css">
 
