Cosmetic changes and changes for pythonanywhere
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,10 +15,11 @@
 
 
   <meta property="og:title" content="LinkCheck" />
-  <meta property="og:description" content="Linkcheck will discover broken links on any website or webpage." />
+  <meta property="og:description" content="Linkcheck will discover broken links on any website or webpage. Written by
+      Nancy Schorr of Santa Clara, California using Python 3.6, Flask, CSS, Html, etc." />
   <meta property="og:url" content="https://linkcheck.schorrmedia.com/" />
   <meta property="og:image" content="https://schorrmedia.com/images/light7.jpg" />
-
+\
 
 
 
