Cosmetic changes and changes for pythonanywhere
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "https://www.w3.org/TR/html4/strict.dtd">
 
-<html lang="en-US" style=" background: #f1f1f1!important; padding: 1rem;">
+<html lang="en-US" style=" background: slategrey!important; padding: 1rem;">
 <head>
 <link rel="icon" type="image/png" href="https://linkcheck.schorrmedia.com/static/favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
