--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html  PUBLIC "-//W3C//DTD HTML 4.01//EN"
       "https://www.w3.org/TR/html4/strict.dtd">
 
-<html style="background: #f1f1f1!important; padding: 1rem;">
+<html style="background: silver!important; padding: 1rem;">
 
 <head>
 <link rel="icon" type="image/png" href="https://linkcheck.schorrmedia.com/static/favicon.png">
@@ -39,7 +39,8 @@ h4 {
 
 #errline2 {
         color:Red;
-        }
+        padding-top:5px;
+       }
 
 .cstyle {
      font-size:14px;
@@ -142,7 +143,7 @@ font-size:22px;
 text-shadow: 1px 1px 1px grey;
 }
 
-.w3-blue-gray:hover{ color:#fff!important; background-color: #568386  !important }
+.w3-blue-gray:hover{ color:white!important; background-color: #568386  !important }
 .w3-blue-gray{ background-color: #a2c1c3  !important }#568386
 
 .w3-container {
@@ -188,7 +189,7 @@ text-shadow: 1px 1px 1px grey;
 
 </div>
 
-  <div style="background-color:lightgrey;linear-gradient(cyan, gray) padding:2px;"> &nbsp; </div>
+  <div style=" background: linear-gradient(to left, #336666 0%, #ffffff 100%); padding:2px;"> &nbsp; </div>
 
   </div>
 
