Cosmetic changes and changes for pythonanywhere
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -39,7 +39,7 @@ h4 {
 
 #errline2 {
         color:Red;
-        padding-top:5px;
+        padding-top:12px;
        }
 
 .cstyle {
@@ -89,7 +89,6 @@ padding-top:5px;
   padding-top: 2.7em;
   padding-left: 9em;
   text-align: center;
-
      }
 
 
@@ -134,17 +133,28 @@ $(function() {
 <style>
 .w3-bar .w3-bar-item  {
 padding:8px 22px;
+background-color:#568386!important;
 color:white;
 }
+.w3-bar-item  {
+opacity: 1;
+}
+.w3-bar-item:hover  {
+opacity: .79;
+}
+
+
+
 .menufontns {
 font-family:Montserrat, sans-serif;
 line-height:1.5;
 font-size:22px;
-text-shadow: 1px 1px 1px grey;
+text-shadow: 1px 1px 1px #a2c1c3;
+background-color: #a2c1c3;
 }
 
-.w3-blue-gray:hover{ color:white!important; background-color: #568386  !important }
-.w3-blue-gray{ background-color: #a2c1c3  !important }#568386
+.w3-blue-gray:hover{ color:white!important; background-color:#568386!important;} }
+.w3-blue-gray{ background-color: #568386!important; }
 
 .w3-container {
 	padding: 0.01em 0px;
