Cosmetic changes and changes for pythonanywhere
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,7 @@ you want to check <br>
 
 <br>
 <div  style="padding-left: 19em; color: #4d7f80; padding-top:3em; z-index:101; font-family:
-    Arial, sans-serif; font-size:14px; color:mediumslateblue; position:absolute;">
+    Arial, sans-serif; font-size:14px; position:absolute;">
     If you're here just to try LinkCheck, <br>you can copy and paste this:<br><br>
 schorrmedia.com/m.html<br></h4>
 <br>
