--- a/static/style.css
+++ b/static/style.css
@@ -13,7 +13,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
-  color: #377ba8;
+  color: slategrey;
   margin: 1rem 0;
 }
 
