--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -77,7 +77,7 @@ h3 {
     margin-top: 4em;
     display: none;
     font-style: italic;
-    color: PaleVioletRed;
+    color: Red;
 }
 
 #bodd {
@@ -96,6 +96,7 @@ h3 {
 
 #hthree {
     padding-left: 2em;
+    color:slategrey;
    }
 
 .bot {
@@ -107,7 +108,7 @@ h3 {
     padding-top:1em;
     font-weight: bolder;
     font-size: 150%;
-    color:PaleVioletRed;
+    color:Red;
     display: none;
    }
 
@@ -117,7 +118,7 @@ h3 {
     display: none;
     font-style: italic;
     font-size: 100%;
-    color:#4d7f80;
+    color:slategrey;
    }
 
 #div2 {
@@ -125,7 +126,7 @@ h3 {
     margin-top: 4em;
     display: none;
     font-size: 16px;
-    color: #4d7f80;
+    color: slategrey;
     font-style: italic;
    }
 
