Cosmetic changes and changes for pythonanywhere
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html  PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 
-<html lang="en-US" prefix="og: http://ogp.me/ns#" style=" background: #f1f1f1!important; padding: 1rem;">
+<html lang="en-US" prefix="og: http://ogp.me/ns#" style=" background: slategrey!important; padding: 1rem;">
 
 <head profile="https://www.w3.org/2005/10/profile">
 <link rel="icon" type="image/png" href="https://linkcheck.schorrmedia.com/static/favicon.png">
@@ -19,7 +19,7 @@
       Nancy Schorr of Santa Clara, California using Python 3.6, Flask, CSS, Html, etc." />
   <meta property="og:url" content="https://linkcheck.schorrmedia.com/" />
   <meta property="og:image" content="https://schorrmedia.com/images/light7.jpg" />
-\
+
 
 
 
@@ -96,11 +96,14 @@ width: 100%;
 
 <form action="indexn" method ="POST" >
 <div style="font-family: Montserrat, sans-serif;
-     font-weight: 700; padding-left: 2em; padding-top: .5em; color:#4d7f80 ;">
-Enter website or webpage<br>
-you want to check <br>
-    for broken links <br>
-(no http prefix needed) https://
+     font-weight:700; padding-left: 2em; padding-top: .5em; color:slategrey ;padding-left:4em;">
+Enter website or webpage you want to check. <br>
+
+To force use of "http://" just include it in the url.<br>
+
+Otherwise "https://" will be added to your entry.  <br> &nbsp; <br>
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp; https://
+
 <input type="text" size="55" name="name"><br>
 </div><div style="padding-left:20em;  padding-top:10px;padding-bottom:6px;">
 
